fixed the view feature, where alignment of headers was not proper for certain tables

--- a/static/styles/setup.css
+++ b/static/styles/setup.css
@@ -1,7 +1,7 @@
 .setup-container {
-    width: 50%;
+    width: 80%;
     position: relative;
-    left: 30%;
+    left: 18%;
     margin-top: 5%;
 }
 
